fix(header): L3-4294 Dvh Fix for Mobile Scroll Issue Nav Spacing Fix (#399)

--- a/src/site-furniture/Header/_header.scss
+++ b/src/site-furniture/Header/_header.scss
@@ -105,7 +105,7 @@
 
   &__nav {
     background-color: $pure-white;
-    height: calc(100vh - $header-height);
+    height: calc(100dvh - $header-height);
     overflow-y: auto;
     position: relative;
     z-index: 10;
@@ -119,7 +119,7 @@
 
       @include isHeaderMobile {
         flex-direction: column;
-        height: calc(100vh - var(--header-height) - 1px);
+        height: calc(100dvh - var(--header-height) - 1px);
         justify-content: flex-start;
         padding: 0 $spacing-md;
       }
@@ -142,10 +142,6 @@
       &--closed {
         display: unset;
         left: -100%;
-      }
-
-      .#{$px}-nav__list {
-        padding-top: $spacing-md;
       }
     }
 
